--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,10 @@ email: ayu@ayu.dev
 description: Beemo is a free antispam Discord Bot that can stop userbot raids against your server.
 github_username: AyuAi
 
+navbar:
+  - text: "hello"
+    href: Tiers/Free
+
 aux_links:
   "Go to Beemo.gg":
     - "https://beemo.gg/"
